welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:-6: error: Missing closing brace `}' assumed here
try {
^blueTicket:1: error: expected class or object definition
def blueTicket(a:Int, b:Int, c:Int):Int = {
^